--- a/limesurvey/Dockerfile
+++ b/limesurvey/Dockerfile
@@ -9,15 +9,14 @@ RUN apt-get update && apt-get upgrade -y \
 RUN docker-php-ext-install mysqli pdo pdo_mysql zip \
     && docker-php-ext-enable mysqli
 
-# Enable Apache mod_rewrite
-RUN a2enmod rewrite
+COPY ./limesurvey.conf /etc/apache2/sites-available/
 
-# Copy limesurvey into the docker container
-COPY limesurvey /var/www/html/limesurvey
 
-# Set the correct permissions
-RUN chown -R www-data:www-data /var/www/html/limesurvey \
-    && chmod -R 755 /var/www/html/limesurvey
+RUN chown -R www-data:www-data /var/www/html/limesurvey && \
+    chmod -R 755 /var/www/html/limesurvey && \
+    a2ensite limesurvey && \
+    a2dissite 000-default.conf && \
+    a2enmod rewrite && \
+    service apache2 restart
 
-# Expose port 80
 EXPOSE 80
