--- a/limesurvey/Dockerfile
+++ b/limesurvey/Dockerfile
@@ -9,10 +9,12 @@ RUN apt-get update && apt-get upgrade -y \
 RUN docker-php-ext-install mysqli pdo pdo_mysql zip \
     && docker-php-ext-enable mysqli
 
+# Copy LimeSurvey directory and config file
+COPY ./limesurvey /var/www/html/limesurvey
 COPY ./limesurvey.conf /etc/apache2/sites-available/
 
-RUN mkdir -p /var/www/html/limesurvey && \
-    chown -R www-data:www-data /var/www/html/limesurvey && \
+# Set proper permissions and enable site
+RUN chown -R www-data:www-data /var/www/html/limesurvey && \
     chmod -R 755 /var/www/html/limesurvey && \
     a2ensite limesurvey && \
     a2dissite 000-default.conf && \
