--- a/monit/Dockerfile
+++ b/monit/Dockerfile
@@ -11,7 +11,7 @@ COPY monitrc /etc/monit/
 # Set the permissions for the config file
 RUN chmod 0700 /etc/monit/monitrc && \
     ln -s /etc/monit/conf-available/apache2 /etc/monit/conf-enabled/ && \
-    service reload monit
+    monit reload
 
 # Expose the Monit httpd port
 EXPOSE 2812
