--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,4 +1,3 @@
-FROM fluent/fluentd:v1.12-debian-1
-USER root
-RUN ["gem", "install", "fluent-plugin-tail-path", "--no-rdoc", "--no-ri", "--version", "0.0.4"]
-USER fluent
+# fluentd/Dockerfile
+FROM fluent/fluentd:v0.12-debian
+RUN ["gem", "install", "fluent-plugin-elasticsearch", "--no-rdoc", "--no-ri", "--version", "1.9.2"]
