--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       - "24224:24224/udp"
 
   elasticsearch:
-    image: elasticsearch
+    image: elasticsearch:8.7.1
     expose:
       - 9200
     volumes:
@@ -71,7 +71,7 @@ services:
       - "9200:9200"
 
   kibana:
-    image: kibana
+    image: kibana:8.7.1
     links:
       - "elasticsearch"
     ports:
