--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,3 +1,5 @@
 # fluentd/Dockerfile
 FROM fluent/fluentd:v1.12-debian
+USER root
 RUN ["gem", "install", "fluent-plugin-elasticsearch", "--version", "4.3.3"]
+USER fluent
