--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,31 +51,37 @@ services:
     ports:
       - '8888:8080'
 
-  fluentd:
+
+  fluentd: 
     build: ./fluentd
-    volumes:
-      - ./fluentd/conf:/fluentd/etc
-    links:
-      - "elasticsearch"
-    ports:
-      - "24224:24224"
-      - "24224:24224/udp"
+    links: # Sends incoming logs to the elasticsearch container.
+      - elasticsearch
+    depends_on:
+      - elasticsearch
+    ports: # Exposes the port 24224 on both TCP and UDP protocol for log aggregation
+      - 24224:24224
+      - 24224:24224/udp
+
 
   elasticsearch:
     image: elasticsearch:8.7.1
-    expose:
+    expose: # Exposes the default port 9200
       - 9200
-    volumes:
+    environment:
+      - discovery.type=single-node # Runs as a single-node
+    volumes: # Stores elasticsearch data locally on the esdata Docker volume
       - esdata:/usr/share/elasticsearch/data
-    ports:
-      - "9200:9200"
 
   kibana:
     image: kibana:8.7.1
-    links:
-      - "elasticsearch"
-    ports:
-      - "5601:5601"
+    links: # Links kibana service to the elasticsearch container
+      - elasticsearch
+    depends_on:
+      - elasticsearch
+    ports: # Runs kibana service on default port 5601
+      - 5601:5601
+    environment: # Defined host configuration
+      - ELASTICSEARCH_HOSTS=http://consttier.tech:9200
 
   
 
