--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -1,9 +1,14 @@
-# fluentd/conf/fluent.conf
+# bind fluentd on IP 0.0.0.0
+# port 24224
 <source>
   @type forward
   port 24224
   bind 0.0.0.0
 </source>
+
+# sendlog to the elasticsearch
+# the host must match to the elasticsearch
+# container service
 <match *.**>
   @type copy
   <store>
@@ -16,7 +21,7 @@
     include_tag_key true
     type_name access_log
     tag_key @log_name
-    flush_interval 1s
+    flush_interval 300s
   </store>
   <store>
     @type stdout
