--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         context: ./limesurvey
         dockerfile: Dockerfile
     depends_on:
-        - db
+        - db_system
     environment:
       MYSQL_HOST: db
       MYSQL_USER: root
