--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services: 
 
   limesurvey_system:
-    container_name: limesurvey
+    container_name: limesurvey_system
     build:
         context: ./limesurvey
         dockerfile: Dockerfile
@@ -26,6 +26,7 @@ services:
         tag: limesurvey.access
 
   monit_system:
+    container_name: monit_system
     build:
       context: ./monit
       dockerfile: Dockerfile
@@ -35,7 +36,7 @@ services:
       - "2813:2812"
   
   db_system:
-    container_name: db
+    container_name: db_system
     image: mysql
     restart: always
     environment:
@@ -47,12 +48,14 @@ services:
         - "9907:3306"
 
   adminer_system:
+    container_name: adminer_system
     image: adminer
     ports:
       - '8889:8080'
 
 
   fluentd:
+    container_name: fluentd
     build: ./fluentd
     links: # Sends incoming logs to the elasticsearch container.
       - elasticsearch
@@ -64,6 +67,7 @@ services:
 
 
   elasticsearch:
+    container_name: elasticsearch
     image: elasticsearch:8.7.1
     expose: # Exposes the default port 9200
       - 9200
@@ -73,6 +77,7 @@ services:
       - esdata:/usr/share/elasticsearch/data
 
   kibana:
+    container_name: kibana
     image: kibana:8.7.1
     links: # Links kibana service to the elasticsearch container
       - elasticsearch
