--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     logging:
       driver: "fluentd"
       options:
-        fluentd-address: system-fluentd:24224
+        fluentd-address: fluentd:24224
         tag: limesurvey.access
 
   monit_system:
