--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     logging:
       driver: "fluentd"
       options:
-        fluentd-address: 172.26.0.6:24224
+        fluentd-address: consttier.tech:24224
         tag: limesurvey.access
 
   monit_system:
