--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
         - db_system
     environment:
-      MYSQL_HOST: db
+      MYSQL_HOST: db_system
       MYSQL_USER: root
       MYSQL_PORT: '3306'
       MYSQL_PASSWORD: mynewpassword
